{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 111,
  "lineage": "4d552318-91ef-2ddb-ff75-5fcb8947eb89",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "frontend_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:vpc/vpc-0f113da8988463296",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c7bdea2aa41bf338",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-052b6b69c4a692dd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f113da8988463296",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0024b8e63433a658f",
            "owner_id": "054721838790",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "frontend_vpc_sg",
              "Region": "ap-southeast-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f78cc1488e9579c",
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:elastic-ip/eipalloc-08f78cc1488e9579c",
            "association_id": "eipassoc-0f22d7a9934b9e9fb",
            "domain": "vpc",
            "id": "eipalloc-08f78cc1488e9579c",
            "instance": "i-0675017fd43004b6a",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-06f78c1d17d7aba30",
            "private_dns": "ip-10-0-1-37.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.37",
            "public_dns": "ec2-13-229-17-57.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.17.57",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-srv-eip"
            },
            "tags_all": {
              "Name": "public-srv-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile_1",
            "aws_iam_role.ec2_ssm_role_1",
            "aws_instance.frontend_srv",
            "aws_security_group.frontend_security",
            "aws_subnet.frontend_private",
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daec3b9e2cebe802",
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:elastic-ip/eipalloc-0daec3b9e2cebe802",
            "association_id": "eipassoc-0c48a7bb6220a5e0b",
            "domain": "vpc",
            "id": "eipalloc-0daec3b9e2cebe802",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0f6c529475c06f445",
            "private_dns": "ip-10-0-1-147.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-3-0-136-55.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.136.55",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "nat-eip-a"
            },
            "tags_all": {
              "Name": "nat-eip-a"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_srv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ffd8e96d1336b6ac",
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:instance/i-0921fa63257195b30",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-SSM-Instance-Profile_1",
            "id": "i-0921fa63257195b30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0852e5fcc190970f2"
              }
            ],
            "primary_network_interface_id": "eni-0852e5fcc190970f2",
            "private_dns": "ip-20-0-1-224.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.1.224",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b5d962020cc59e44",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b00ce66a48bdd382",
            "tags": {
              "Name": "backend-srv"
            },
            "tags_all": {
              "Name": "backend-srv"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb1c9d2aec35c85e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "i-0921fa63257195b30",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile_1",
            "aws_iam_role.ec2_ssm_role_1",
            "aws_security_group.backend_security",
            "aws_subnet.backend_private",
            "aws_vpc.backend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_srv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ffd8e96d1336b6ac",
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:instance/i-0675017fd43004b6a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-SSM-Instance-Profile_1",
            "id": "i-0675017fd43004b6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06f78c1d17d7aba30"
              }
            ],
            "primary_network_interface_id": "eni-06f78c1d17d7aba30",
            "private_dns": "ip-10-0-1-37.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.37",
            "public_dns": "ec2-13-229-17-57.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.17.57",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-061a45c456ac307dd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f48cb3db8abdf0fd",
            "tags": {
              "Name": "frontend-srv"
            },
            "tags_all": {
              "Name": "frontend-srv"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002416052935dbd17"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "i-0675017fd43004b6a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile_1",
            "aws_iam_role.ec2_ssm_role_1",
            "aws_security_group.frontend_security",
            "aws_subnet.frontend_private",
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:internet-gateway/igw-0d96054b6ed63137b",
            "id": "igw-0d96054b6ed63137b",
            "owner_id": "054721838790",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "igw_sg"
            },
            "tags_all": {
              "Name": "igw_sg"
            },
            "vpc_id": "vpc-0f113da8988463296"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daec3b9e2cebe802",
            "association_id": "eipassoc-0c48a7bb6220a5e0b",
            "connectivity_type": "public",
            "id": "nat-0c0560db0356c0d19",
            "network_interface_id": "eni-0f6c529475c06f445",
            "private_ip": "10.0.1.147",
            "public_ip": "3.0.136.55",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f48cb3db8abdf0fd",
            "tags": {
              "Name": "natgw-a"
            },
            "tags_all": {
              "Name": "natgw-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_internet_gateway.igw_sg",
            "aws_subnet.frontend_private",
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "aws_to_hvn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/20",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0024b8e63433a658f719218358",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0024b8e63433a658f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0bec3c7b468010c4a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "destination_cidr_block": "192.168.0.0/20",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0024b8e63433a658f"
          },
          "dependencies": [
            "aws_vpc.frontend_vpc_sg",
            "aws_vpc_peering_connection_accepter.peer",
            "data.aws_vpc.frontend_vpc_sg",
            "hcp_aws_network_peering.peer",
            "hcp_hvn.vault_hvn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "backend_peer_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-099fd3424edc1cccc179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-099fd3424edc1cccc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f981d3f72bd3385d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-099fd3424edc1cccc"
          },
          "dependencies": [
            "aws_route_table.backend_rt",
            "aws_vpc.backend_vpc_sg",
            "aws_vpc.frontend_vpc_sg",
            "aws_vpc_peering_connection.sample_peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "frontend_peer_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b22cfadfa9b761a72472047643",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0b22cfadfa9b761a7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f981d3f72bd3385d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "destination_cidr_block": "20.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0b22cfadfa9b761a7"
          },
          "dependencies": [
            "aws_route_table.frontend_rt",
            "aws_vpc.backend_vpc_sg",
            "aws_vpc.frontend_vpc_sg",
            "aws_vpc_peering_connection.sample_peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d96054b6ed63137b",
            "id": "r-rtb-02bd792a661bb067f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-02bd792a661bb067f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-02bd792a661bb067f"
          },
          "dependencies": [
            "aws_internet_gateway.igw_sg",
            "aws_route_table.public_rt_sg",
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "backend_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:route-table/rtb-099fd3424edc1cccc",
            "id": "rtb-099fd3424edc1cccc",
            "owner_id": "054721838790",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0f981d3f72bd3385d"
              }
            ],
            "tags": {
              "Name": "backend_rt"
            },
            "tags_all": {
              "Name": "backend_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab81a6f7696dd1de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "rtb-099fd3424edc1cccc",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.backend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frontend_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:route-table/rtb-0b22cfadfa9b761a7",
            "id": "rtb-0b22cfadfa9b761a7",
            "owner_id": "054721838790",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0f981d3f72bd3385d"
              }
            ],
            "tags": {
              "Name": "frontend_rt"
            },
            "tags_all": {
              "Name": "frontend_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f113da8988463296"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "rtb-0b22cfadfa9b761a7",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:route-table/rtb-02bd792a661bb067f",
            "id": "rtb-02bd792a661bb067f",
            "owner_id": "054721838790",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d96054b6ed63137b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-sg"
            },
            "tags_all": {
              "Name": "public-rt-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f113da8988463296"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "rtb-02bd792a661bb067f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b037b685449060da",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-099fd3424edc1cccc",
            "subnet_id": "subnet-0b00ce66a48bdd382"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.backend_rt",
            "aws_subnet.backend_private",
            "aws_vpc.backend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030dfaad12e87edcf",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-02bd792a661bb067f",
            "subnet_id": "subnet-0f48cb3db8abdf0fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt_sg",
            "aws_subnet.frontend_private",
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:security-group/sg-0bb1c9d2aec35c85e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb1c9d2aec35c85e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Vault HTTP",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow ICMP Echo Request (ping)",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "20.0.0.0/16"
                ],
                "description": "Allow HTTPS from inside VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "backend_security",
            "name_prefix": "",
            "owner_id": "054721838790",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend_security"
            },
            "tags_all": {
              "Name": "backend_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab81a6f7696dd1de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "sg-0bb1c9d2aec35c85e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.backend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:security-group/sg-002416052935dbd17",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002416052935dbd17",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS from inside VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "20.0.0.0/16"
                ],
                "description": "Allow ICMP Echo Request (ping)",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "frontend_security",
            "name_prefix": "",
            "owner_id": "054721838790",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend_security"
            },
            "tags_all": {
              "Name": "frontend_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f113da8988463296"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "sg-002416052935dbd17",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:subnet/subnet-0b00ce66a48bdd382",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b00ce66a48bdd382",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054721838790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "backend_private"
            },
            "tags_all": {
              "Name": "backend_private"
            },
            "vpc_id": "vpc-0ab81a6f7696dd1de"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "subnet-0b00ce66a48bdd382",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.backend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:subnet/subnet-0f48cb3db8abdf0fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f48cb3db8abdf0fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054721838790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "frontend_private"
            },
            "tags_all": {
              "Name": "frontend_private"
            },
            "vpc_id": "vpc-0f113da8988463296"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "subnet-0f48cb3db8abdf0fd",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "backend_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:vpc/vpc-0ab81a6f7696dd1de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0fae471c0d3657517",
            "default_route_table_id": "rtb-0ed8baf9c648fc511",
            "default_security_group_id": "sg-02c05e886f76ddf4c",
            "dhcp_options_id": "dopt-052b6b69c4a692dd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab81a6f7696dd1de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed8baf9c648fc511",
            "owner_id": "054721838790",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "backend_vpc_sg",
              "Region": "ap-southeast-1"
            },
            "tags_all": {
              "Name": "backend_vpc_sg",
              "Region": "ap-southeast-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "vpc-0ab81a6f7696dd1de",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "frontend_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:vpc/vpc-0f113da8988463296",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030adc0ed1cd7edd6",
            "default_route_table_id": "rtb-0024b8e63433a658f",
            "default_security_group_id": "sg-05817e0242b36eb0c",
            "dhcp_options_id": "dopt-052b6b69c4a692dd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f113da8988463296",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0024b8e63433a658f",
            "owner_id": "054721838790",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "frontend_vpc_sg",
              "Region": "ap-southeast-1"
            },
            "tags_all": {
              "Name": "frontend_vpc_sg",
              "Region": "ap-southeast-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "vpc-0f113da8988463296",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:vpc-endpoint/vpce-02e44b5c5827c00d1",
            "dns_entry": [
              {
                "dns_name": "vpce-02e44b5c5827c00d1-dnqhvajm.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-02e44b5c5827c00d1-dnqhvajm-ap-southeast-1b.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ec2messages.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0892001B632Z5MN5MPX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02e44b5c5827c00d1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-036993cd660910e4c"
            ],
            "owner_id": "054721838790",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-002416052935dbd17"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2messages",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.191",
                "subnet_id": "subnet-0f48cb3db8abdf0fd"
              }
            ],
            "subnet_ids": [
              "subnet-0f48cb3db8abdf0fd"
            ],
            "tags": {
              "Name": "vpce-ec2messages"
            },
            "tags_all": {
              "Name": "vpce-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f113da8988463296"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "vpce-02e44b5c5827c00d1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.frontend_security",
            "aws_subnet.frontend_private",
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:vpc-endpoint/vpce-073b7baab9fa4cd61",
            "dns_entry": [
              {
                "dns_name": "vpce-073b7baab9fa4cd61-wzw3v8pg.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-073b7baab9fa4cd61-wzw3v8pg-ap-southeast-1b.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ssm.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z00245273S41LH19X5MV"
              },
              {
                "dns_name": "ssm.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z00245622RF7ZXQ4XEYA0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-073b7baab9fa4cd61",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-097b137dc82427c48"
            ],
            "owner_id": "054721838790",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-002416052935dbd17"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssm",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.217",
                "subnet_id": "subnet-0f48cb3db8abdf0fd"
              }
            ],
            "subnet_ids": [
              "subnet-0f48cb3db8abdf0fd"
            ],
            "tags": {
              "Name": "vpc_endpoint_ssm"
            },
            "tags_all": {
              "Name": "vpc_endpoint_ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f113da8988463296"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "vpce-073b7baab9fa4cd61",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.frontend_security",
            "aws_subnet.frontend_private",
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:054721838790:vpc-endpoint/vpce-0fdd6b599e77d6a08",
            "dns_entry": [
              {
                "dns_name": "vpce-0fdd6b599e77d6a08-j90nvt5t.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0fdd6b599e77d6a08-j90nvt5t-ap-southeast-1b.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ssmmessages.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z10004872SINAM4BGJHRZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fdd6b599e77d6a08",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bf409d8bd89c861e"
            ],
            "owner_id": "054721838790",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-002416052935dbd17"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssmmessages",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.39",
                "subnet_id": "subnet-0f48cb3db8abdf0fd"
              }
            ],
            "subnet_ids": [
              "subnet-0f48cb3db8abdf0fd"
            ],
            "tags": {
              "Name": "vpc_endpoint_ssmmessages"
            },
            "tags_all": {
              "Name": "vpc_endpoint_ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f113da8988463296"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054721838790",
            "id": "vpce-0fdd6b599e77d6a08",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.frontend_security",
            "aws_subnet.frontend_private",
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "sample_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0f981d3f72bd3385d",
            "peer_owner_id": "054721838790",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-0ab81a6f7696dd1de",
            "region": "ap-southeast-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between frontend and backend"
            },
            "tags_all": {
              "Name": "VPC Peering between frontend and backend"
            },
            "vpc_id": "vpc-0f113da8988463296"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.backend_vpc_sg",
            "aws_vpc.frontend_vpc_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0bec3c7b468010c4a",
            "peer_owner_id": "711387098594",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-08d0a521077cf145d",
            "region": "ap-southeast-1",
            "vpc_id": "vpc-0f113da8988463296",
            "vpc_peering_connection_id": "pcx-0bec3c7b468010c4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.frontend_vpc_sg",
            "data.aws_vpc.frontend_vpc_sg",
            "hcp_aws_network_peering.peer",
            "hcp_hvn.vault_hvn"
          ]
        }
      ]
    }
  ]
}